homepage html and css created
the basic structure of the website has been created

--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Yapping Ape</title>
-        <link rel='stylesheet' href='homepage.css'>
+        <title>Hungry Mind</title>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double:wght@100..900&display=swap" rel="stylesheet">
+
+        <link rel='stylesheet' href='./styles/homepage.css'>
     </head>
     <body>
-        <p>Test</p>
-        <p>Test 2</p>
-        <p>Test 3</p>
+        <nav>
+            <div id="nav-strip">
+
+            </div>
+            <div id="nav-bar">
+                <div class="nav-button">
+                    Home
+                </div>
+                <div class="nav-button">
+                    Blog
+                </div>
+                <div class="nav-button">
+                    Projects
+                </div>
+                <div class="nav-button">
+                    About Me
+                </div>
+                <div class="nav-button">
+                    Contact Me
+                </div>
+            </div>
+        </nav>
+        <div id="blog-links">
+
+        </div>
     </body>
 </html>
