--- a/index.html
+++ b/index.html
@@ -12,12 +12,8 @@
     <body>
         <nav>
             <div id="nav-strip">
-
             </div>
             <div id="nav-bar">
-                <div class="nav-button">
-                    Home
-                </div>
                 <div class="nav-button">
                     Blog
                 </div>
@@ -33,7 +29,28 @@
             </div>
         </nav>
         <div id="blog-links">
-
+            <div class="blog-link">
+                <div class="blog-title">
+                    Title
+                </div>
+                <div class="blog-date">
+                    17/17/2027
+                </div>
+                <div class="blog-description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim  veniam
+                </div>
+            </div>
+            <div class="blog-link">
+                <div class="blog-title">
+                    Title
+                </div>
+                <div class="blog-date">
+                    17/17/2027
+                </div>
+                <div class="blog-description">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim  veniam
+                </div>
+            </div>
         </div>
     </body>
 </html>
