--- a/index.html
+++ b/index.html
@@ -8,48 +8,34 @@
         <link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double:wght@100..900&display=swap" rel="stylesheet">
 
         <link rel='stylesheet' href='./styles/homepage.css'>
+        <script src="/scripts/homepage.js" defer></script>
     </head>
     <body>
         <nav>
-            <div id="nav-strip">
+            <div class="nav-button left-button">
+                Projects
             </div>
-            <div id="nav-bar">
-                <div class="nav-button">
-                    Blog
-                </div>
-                <div class="nav-button">
-                    Projects
-                </div>
-                <div class="nav-button">
-                    About Me
-                </div>
-                <div class="nav-button">
-                    Contact Me
-                </div>
+            <div class="nav-button middle-button">
+                About Me
+            </div>
+            <div class="nav-button right-button">
+                Contact Me
             </div>
         </nav>
-        <div id="blog-links">
-            <div class="blog-link">
-                <div class="blog-title">
-                    Title
-                </div>
-                <div class="blog-date">
-                    17/17/2027
-                </div>
-                <div class="blog-description">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim  veniam
-                </div>
+        <div id="main-content-container">
+            <div id="projects-container">
+                <img src="/images/under-construction.png" alt="under construction image" class="under-construction-image">
+                <p class="under-construction-text">Under Construction</p>
             </div>
-            <div class="blog-link">
-                <div class="blog-title">
-                    Title
-                </div>
-                <div class="blog-date">
-                    17/17/2027
-                </div>
-                <div class="blog-description">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim  veniam
-                </div>
+            <div class="separator"></div>
+            <div id="about-me-container">
+                <p class="heading">About Me</p>
+                <p class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="separator"></div>
+            <div id="contact-me-container">
+                <p class="heading">Contact Me</p>
+                <p class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
         </div>
     </body>
