--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
         <div id="main-content-container">
             <div id="projects-container">
-                <img src="/images/under-construction.png" alt="under construction image" class="under-construction-image">
+                <img src="./images/under-construction.png" alt="under construction image" class="under-construction-image">
                 <p class="under-construction-text">Under Construction</p>
             </div>
             <div class="separator"></div>
