--- a/about-me.html
+++ b/about-me.html
@@ -23,9 +23,9 @@
         </nav>
         <div id="main-content-container">
             <div id="content-container">
-                <img id="personal-photo" src="./images/testbanner.jpg">
-                <p id="about-me-body">lorem ipsum</p>
-                <p>Email: jeremystaton97@gmail.com</p>
+                <p class="heading">ABOUT ME</p>
+                <img id="personal-photo" src="./images/me.jpg">
+                <p id="about-me-body">Hi, I am Jeremy Stanton, I am Australian, and I am an aspiring web developer; I enjoy all areas web development but I am focusing on learning backend. I also dabble in game development. If you wish to contact me, my email is <span id="highlight">jeremystaton97@gmail.com</span></p>
             </div>
         </div>
         <footer>
